# ChangeLog for dev-python/apiextractor
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*apiextractor-0.3.2 (05 Dec 2009)

  05 Dec 2009; Dominik Kapusta <ayoy@gentoo.org> -apiextractor-0.2.ebuild,
  -apiextractor-0.3.1.ebuild, +apiextractor-0.3.2.ebuild,
  apiextractor-9999.ebuild:
  Version bump, remove old

*apiextractor-9999 (08 Nov 2009)

  08 Nov 2009; Dominik Kapusta <ayoy@gentoo.org> +apiextractor-9999.ebuild:
  Adding live ebuild, compatible with Qt 4.6

*apiextractor-0.3.1 (07 Nov 2009)

  07 Nov 2009; Dominik Kapusta <ayoy@gentoo.org> apiextractor-0.2.ebuild,
  +apiextractor-0.3.1.ebuild:
  Version bump + fixing dependencies

  23 Aug 2009; Dror Levin <spatz@psybear.com> apiextractor-0.2.ebuild:
  Add ~x86 for testing, minor cleanups.

*apiextractor-0.2 (18 Aug 2009)

  18 Aug 2009; Dror Levin <spatz@psybear.com> +apiextractor-0.2.ebuild,
  +metadata.xml:
  Initial commit.
